fix(atoms/layout): added z-index on topbar

--- a/packages/core/src/components/atoms/layout/layout.component.scss
+++ b/packages/core/src/components/atoms/layout/layout.component.scss
@@ -26,7 +26,7 @@
 	.topbar {
 		grid-area: topbar;
 
-		@apply sticky w-full;
+		@apply sticky z-[11] w-full;
 	}
 
 	.sidebar {
